--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,19 @@
 language: scala
+dist: trusty
 scala:
-   - 2.11.8
+   - 2.11.11
 
 jdk:
   - oraclejdk8
-  - openjdk7
 
-sudo: false
+# These directories are cached to S3 at the end of the build
 cache:
   directories:
-  - $HOME/.sbt
-  - $HOME/.ivy2
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
+
 before_cache:
-  - find $HOME/.sbt -name "*.lock" -type f -delete
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
+  # Cleanup the cached directories to avoid unnecessary cache updates
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
+  - find $HOME/.sbt        -name "*.lock"               -print -delete
 
