--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: scala
+
+os: linux
+
 dist: trusty
+
 scala:
    - 2.11.11
 
@@ -16,4 +20,3 @@ before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
-
