--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ dist: trusty
 
 scala:
    - 2.11.11
+   - 2.11.12
 
 jdk:
   - oraclejdk8
+  - openjdk8
 
 # These directories are cached to S3 at the end of the build
 cache:
